tests/compile-tests/bad_cmp_op.stderr
error: expected >=, <= or ==
 --> $DIR/bad_cmp_op.rs:6:12
  |
6 |   c!(x + y != 1 - z);
  |            ^^

error: expected >=, <= or ==
 --> $DIR/bad_cmp_op.rs:7:12
  |
7 |   c!(x + y < 1 - z);
  |            ^

error: expected >=, <= or ==
 --> $DIR/bad_cmp_op.rs:8:12
  |
8 |   c!(x + y > 1 - z);
  |            ^
